# discordpy-logging-handler

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: codeql-analysis.yml  python-ci.yml  python-publish.yml
discordpy_logging_handler/: __init__.py  _datetime.py  _embed.py  handler.py
docs/: conf.py  index.rst
tests/: test_handler.py
